Adding support for BeOS.  Bug #39164