mozilla/security/psm/lib/client/cmtinit.c
@@ -31,13 +31,15 @@
  * may use your version of this file under either the MPL or the
  * GPL.
  */
-#ifdef XP_UNIX
+#if defined(XP_UNIX) || defined(XP_BEOS)
 #include <sys/time.h>
 #include <sys/types.h>
 #include <sys/socket.h>
 #include <netinet/in.h>
 #include <sys/stat.h>
+#ifndef XP_BEOS
 #include <netinet/tcp.h>
+#endif
 #else
 #ifdef XP_MAC
 #include <Events.h> // for WaitNextEvent
@@ -55,7 +57,7 @@
 #include "obscure.h"
 #include <string.h>
 
-#ifdef XP_UNIX
+#if defined(XP_UNIX) || defined(XP_BEOS)
 #define DIRECTORY_SEPARATOR '/'
 #elif defined WIN32
 #define DIRECTORY_SEPARATOR '\\'
@@ -183,7 +185,7 @@ getCurrWorkDir(char *buf, int maxLen)
 {
 #if defined WIN32
     return _getcwd(buf, maxLen);
-#elif defined XP_UNIX
+#elif defined(XP_UNIX) || defined(XP_BEOS)
     return getcwd(buf, maxLen);
 #else
     return NULL;
@@ -195,7 +197,7 @@ setWorkingDir(char *path)
 {
 #if defined WIN32
     _chdir(path);
-#elif defined XP_UNIX
+#elif defined(XP_UNIX) || defined(XP_BEOS)
     chdir(path);
 #else
     return;
@@ -240,7 +242,7 @@ launch_psm(char *executable)
     return CMTSuccess;
  loser:
     return CMTFailure;
-#elif defined XP_UNIX
+#elif defined(XP_UNIX) || defined(XP_BEOS)
     sprintf(command,"./%s &", executable);
     if (system(command) == -1) {
         goto loser;
@@ -327,7 +329,7 @@ PCMT_CONTROL CMT_EstablishControlConnection(char            *inPath,
             break;
         }
     }
-#elif defined XP_UNIX
+#elif defined(XP_UNIX) || defined(XP_BEOS)
     i = 0;
     while (i<1000) {
         i += sleep(10);
